# reduse

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  config.h.in  config.hpp.in
include/: mapper.hpp  reduse.hpp  reduser.hpp
include/reduse/: config.hpp  mapper.hpp  modes.hpp  reducer.hpp  reduse.hpp  stopwatch.hpp
tests/: CMakeLists.txt  TestMapper.cpp  TestReducer.cpp  TestReduse.cpp  config.hpp.in  testreduce_map_output.txt  testreduse_input.txt
